Made progress on implementing the website HTML/CSS

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -7,13 +7,34 @@
   <title>Automata Exercises</title>
   <meta name="Intuitive exercises for finite state automata and regular languages" content="ntuitive exercises for finite state automata and regular languages">
   <meta name="UCL Computer Science grp. 31" content="Automata Exercises">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap" rel="stylesheet"> 
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-  <!--<script src="js/scripts.js"></script> -->
-  <h1>Automata Exercises</h1>
+  <header>
+		<div id="logo"><img src="logo.png"></div>
+		<nav>  
+			<ul>
+				<li><a href="/">Home</a>
+				<li><a href="https://html-css-js.com/">Exercises</a>
+				<li><a href="https://html-css-js.com/css/code/">Tutorials</a>
+				<li><a href="https://htmlcheatsheet.com/js/">Create</a>
+			</ul>
+		</nav>
+	</header>
+	<div id="subheader">
+		<nav>  
+			<ul>
+				<li><a href="/">Home</a>
+				<li><a href="https://html-css-js.com/">Who are we</a>
+				<li><a href="https://html-css-js.com/css/code/">Contact</a>
+				<li><a href="https://htmlcheatsheet.com/js/">About</a>
+			</ul>
+		</nav>
+	</div>
 </body>
 </html>
