--- a/webpage/index.html
+++ b/webpage/index.html
@@ -20,9 +20,9 @@
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
-				<li><a href="https://html-css-js.com/">Exercises</a>
-				<li><a href="https://html-css-js.com/css/code/">Tutorials</a>
-				<li><a href="https://htmlcheatsheet.com/js/">Create</a>
+				<li><a href="rien">Exercises</a>
+				<li><a href="rien">Tutorials</a>
+				<li><a href="rien">Create</a>
 			</ul>
 		</nav>
 	</header>
@@ -30,9 +30,9 @@
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
-				<li><a href="https://html-css-js.com/">Who are we</a>
-				<li><a href="https://html-css-js.com/css/code/">Contact</a>
-				<li><a href="https://htmlcheatsheet.com/js/">About</a>
+				<li><a href="rien">Who are we</a>
+				<li><a href="rien">Contact</a>
+				<li><a href="rien">About</a>
 			</ul>
 		</nav>
 	</div>
