Cleaned code, applied styling

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -15,17 +15,19 @@
 </head>
 
 <body>
-  <header>
-		<div id="logo"><img src="logo.png"></div>
-		<nav>  
-			<ul>
-				<li><a href="/">Home</a>
-				<li><a href="rien">Exercises</a>
-				<li><a href="rien">Tutorials</a>
-				<li><a href="rien">Create</a>
-			</ul>
-		</nav>
-	</header>
+	<div id="test">
+		<header>
+				<div id="logo"><img src="logo.png"></div>
+				<nav>  
+					<ul>
+						<li><a href="/">Home</a>
+						<li><a href="rien">Exercises</a>
+						<li><a href="rien">Tutorials</a>
+						<li><a href="rien">Create</a>
+					</ul>
+				</nav>
+		</header>
+	</div>
 	<div id="subheader">
 		<nav>  
 			<ul>
