--- a/webpage/index.html
+++ b/webpage/index.html
@@ -2,25 +2,26 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
+	<title>Automata Exercises</title>
 
-  <title>Automata Exercises</title>
-  <meta name="Intuitive exercises for finite state automata and regular languages" content="ntuitive exercises for finite state automata and regular languages">
-  <meta name="UCL Computer Science grp. 31" content="Automata Exercises">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;1,100&display=swap" rel="stylesheet"> 
+	<meta name="Intuitive exercises for finite state automata and regular languages" content="ntuitive exercises for finite state automata and regular languages">
+	<meta name="UCL Computer Science grp. 31" content="Automata Exercises">
 
-  <link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="logo.png">
 
 </head>
 
 <body>
 	<div id="test">
 		<header>
-				<div id="logo"><img src="logo.png"></div>
+			<a href="index.html"><div id="logo"><img src="logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li><a href="/">Home</a>
+						<li>Home
 						<li><a href="rien">Exercises</a>
 						<li><a href="rien">Tutorials</a>
 						<li><a href="rien">Create</a>
@@ -38,5 +39,15 @@
 			</ul>
 		</nav>
 	</div>
+
+	<div id="homecontent">
+	<h1>FINITE STATE AUTOMATA.</h1>
+	<aside><div id="img"><img src="undraw_Mind_map_re_nlb6.png"></div></aside>
+	<h2>Exercises</h2>
+    <h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
+	<button class="btn home">Let's go!</button>
+	
+	</div>
+	
 </body>
 </html>
