--- a/webpage/who_are_we.html
+++ b/webpage/who_are_we.html
@@ -10,7 +10,7 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,700;0,900;1,600&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style_who_are_we.css">
 	<link rel="icon" href="Images/logo.png">
 
 </head>
@@ -33,21 +33,26 @@
 		<nav>  
 			<ul>
 				<li><a href="/">Home</a>
-				<li><a href="who_are_we.html">Who are we</a>
+				<li><a href="rien">Who are we</a>
 				<li><a href="rien">Contact</a>
 				<li><a href="rien">About</a>
 			</ul>
 		</nav>
 	</div>
 
-	<div id="homecontent">
-		<h1>FINITE STATE AUTOMATA.</h1>
-		<div id="img"><img src="Images/undraw_Mind_map_re_nlb6.png"></div>
-		<h2>Exercises</h2>
+	<div id="top">
+		<h1>WHO ARE WE?</h1>
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
+		<div class="sideImage"><img src="Images/undraw_team_spirit_hrr4(2).png"></div>
+	</div>
+	<div class="card">
+		<div class="profilepic"><img src="Images/logo.png"></div>
+		<h1>John Doe</h1>
+		<h2>His role.</h2>
+		<h3>Lorem ipsum descriptum sit dolor amet</h3>
+		<div class="linkedin"><img src="Images/logo_linkedin.png"></div>
+		<div class="github"><img src="Images/logo_github.png"></div>
 		
-		<button class="btn home"><a href="rien">Let's go!</a></button>
-	
 	</div>
 	
 </body>
