--- a/webpage/who_are_we.html
+++ b/webpage/who_are_we.html
@@ -21,7 +21,7 @@
 			<a href="index.html"><div id="logo"><img src="Images/logo.png"></div></a>
 				<nav>  
 					<ul>
-						<li>Home
+						<li><a href="index.html">Home</a>
 						<li><a href="rien">Exercises</a>
 						<li><a href="rien">Tutorials</a>
 						<li><a href="rien">Create</a>
@@ -32,9 +32,8 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li><a href="/">Home</a>
-				<li><a href="rien">Who are we</a>
-				<li><a href="rien">Contact</a>
+				<li>Who are we
+				<li><a href="contact.html">Contact</a>
 				<li><a href="rien">About</a>
 			</ul>
 		</nav>
@@ -45,11 +44,42 @@
 		<h3>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam </h3>
 		<div class="sideImage"><img src="Images/undraw_team_spirit_hrr4(2).png"></div>
 	</div>
+
 	<div class="card">
 		<div class="profilepic"><img src="Images/logo.png"></div>
 		<h1>John Doe</h1>
 		<h2>His role.</h2>
-		<h3>Lorem ipsum descriptum sit dolor amet</h3>
+		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
+		<div class="linkedin"><img src="Images/logo_linkedin.png"></div>
+		<div class="github"><img src="Images/logo_github.png"></div>
+		
+	</div>
+
+	<div class="card">
+		<div class="profilepic"><img src="Images/logo.png"></div>
+		<h1>John Doe</h1>
+		<h2>His role.</h2>
+		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
+		<div class="linkedin"><img src="Images/logo_linkedin.png"></div>
+		<div class="github"><img src="Images/logo_github.png"></div>
+		
+	</div>
+
+	<div class="card">
+		<div class="profilepic"><img src="Images/logo.png"></div>
+		<h1>John Doe</h1>
+		<h2>His role.</h2>
+		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
+		<div class="linkedin"><img src="Images/logo_linkedin.png"></div>
+		<div class="github"><img src="Images/logo_github.png"></div>
+		
+	</div>
+
+	<div class="card">
+		<div class="profilepic"><img src="Images/logo.png"></div>
+		<h1>Vincent Lefeuve</h1>
+		<h2>Web dev.</h2>
+		<h3>Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet Lorem ipsum descriptum sit dolor amet </h3>
 		<div class="linkedin"><img src="Images/logo_linkedin.png"></div>
 		<div class="github"><img src="Images/logo_github.png"></div>
 		
