Added new links

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -32,9 +32,9 @@
 	<div id="subheader">
 		<nav>  
 			<ul>
-				<li><a href="/">Home</a>
+				<li>Home
 				<li><a href="who_are_we.html">Who are we</a>
-				<li><a href="rien">Contact</a>
+				<li><a href="contact.html">Contact</a>
 				<li><a href="rien">About</a>
 			</ul>
 		</nav>
